--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,1 +1,15 @@
+@import '../../../node_modules/normalize.css/normalize.css';
 @import "../variables.css";
+
+html {
+  font-weight: 100;
+  font-size: 1em; /* ~16px; */
+  font-family: var(--font-family-base);
+}
+
+.root{
+  display: flex;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
