--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: all 0.6s ease;
+  transition: all 0.6s ease-in-out;
+  position: relative;
 }
 
 .panelMain {
@@ -45,9 +46,11 @@
   color: white;
   text-decoration: none;
 }
-.navContainer{
-  font-size: .725em;
+
+.navContainer {
+  font-size: 0.725em;
 }
+
 .navs {
   color: white;
 }
