--- a/src/components/Glance/Glance.css
+++ b/src/components/Glance/Glance.css
@@ -19,7 +19,26 @@
   border: solid 1px #ddd;
 }
 
+.title {
+  margin-top: 0;
+  margin-bottom: .3em;
+  font-size: 1.5em;
+  line-height: 1.3em;
+}
+.excerpt{
+  color: #999;
+}
+.title a {
+  color: #333;
+  text-decoration: none;
+}
+
+.title a:hover {
+  color: #7b0f19;
+}
+
 .metaContainer {
+  color: #555;
   vertical-align: baseline;
   display: flex;
   justify-content: flex-start;
