--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,18 @@
 
 .footer {
   display: block;
-  padding: 2em 0 0 0;
+  padding: 2em 0 0;
   border-top: 2px solid #ddd;
-  font-size: .7em;
+  font-size: 0.7em;
   color: #b3b3b3;
 }
 
 .copyRight {
   display: block;
-  margin-bottom: .7em;
+  margin-bottom: 0.7em;
 }
-.copyRight a{
+
+.copyRight a {
   color: #a6a6a6;
   text-decoration: underline;
 }
