refactor the components, make them irrelevant of relay
Signed-off-by: Jonir Rings <peterpuyi@live.cn>

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
-@import '../../components/variables.css';
+@import '../variables.css';
 
-.panelCover {
+.Navigation {
   flex: 3;
   background: url(https://congm.in/bing.php) center center no-repeat #666;
   background-size: cover;
